--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -1,14 +1,23 @@
 .single-product {
   position: relative;
   overflow: hidden;
-  /* margin: 20px 40px; */
+  margin: 20px 5px;
+  background-color: white;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+  transition: all;
+  transition-duration: 400ms;
+}
+
+.single-product:hover {
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05);
 }
 
 .single-product-description-overlay {
   position: absolute;
   top: 100%;
-  width: 95%;
-  height: 95%;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -17,7 +26,7 @@
   transition: all;
   transition-duration: 400ms;
   border-radius: 5px;
-  margin: 3px;
+  /* margin: 3px; */
   z-index: 1;
   background-color: rgba(10, 212, 250, 0.9);
 }
@@ -25,4 +34,32 @@
 .single-product:hover .single-product-description-overlay {
   top: 0;
   opacity: 1;
+}
+
+.shopping-bag {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 16px 22px 0 0;
+  background-color: rgba(10, 212, 250);
+  border-radius: 50%;
+  padding: 10px;
+  z-index: 2;
+  transition: all;
+  transition-duration: 400ms;
+}
+
+.single-product:hover .shopping-bag {
+  background-color: white;
+}
+
+.shopping-bag-image {
+  height: 18px;
+  width: 18px;
+  color: white;
+  fill: currentColor;
+}
+
+.single-product:hover .shopping-bag-image {
+  color: rgba(10, 212, 250);
 }
